--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kode-intership-2025-react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://KapustaDrakon.github.io/appKODE/",
   "type": "module",
   "scripts": {
     "dev": "vite",
